# auto-short-generator

./: .env.example  .gitignore  MILESTONES.md  README.md  SNIPPET_FLOW.md  USEFULCMDS.md  config.yaml  main.py  pyproject.toml
artifacts/ep001/: run.json
autos/: cli.py  log.py  paths.py  run_meta.py
prompts/: score_schema.json  score_system.txt  score_user.txt
src/autos/: chunker.py  cli.py  config.py  frames.py  paths.py  scene_detect.py  scene_merge.py  scene_thumbs.py  scoring.py  subtitles.py  vision.py
tests/: test_chunking.py  test_frames.py  test_scene_pipeline.py  test_scoring.py  test_subtitles.py  test_vision.py
